--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
@@ -21,33 +21,32 @@
     "@types/swagger-ui-react": "^5.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.523.0",
-    "next": "15.2.5",
+    "lucide-react": "^0.528.0",
+    "next": "15.4.4",
     "next-themes": "^0.4.6",
-    "prisma": "^6.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sonner": "^2.0.5",
+    "prisma": "^6.12.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sonner": "^2.0.6",
     "swagger-ui-express": "^5.0.1",
-    "swagger-ui-react": "^5.20.8",
+    "swagger-ui-react": "^5.27.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.24.2"
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "eslint": "^9",
-    "eslint-config-next": "15.2.5",
-    "jest": "^29.7.0",
-    "jest-mock-extended": "^4.0.0-beta1",
+    "eslint-config-next": "15.4.4",
+    "jest": "^30.0.5",
+    "jest-mock-extended": "^4.0.0",
     "tailwindcss": "^4",
-    "ts-jest": "^29.3.2",
-    "tw-animate-css": "^1.3.4",
+    "ts-jest": "^29.4.0",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
